k8s/portal/portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal
  namespace: sso-pilot
spec:
  selector:
    app: portal
  ports:
    - port: 8080
      targetPort: 8080
